[package]
name = "rustybot"
version = "0.1.0"
authors = ["michael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
futures = "0.3"
async-trait = "0.1.36"
serde_json = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"

[dependencies.async-std]
version = "1.6.2"
features = ["unstable"]
